# marimo-flow

./: .cursorrules  .dockerignore  .env.example  .gitignore  .marimo.toml  .mcp.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MCP_SETUP_COMPLETE.md  PR_DESCRIPTION.md  README.md  SETUP.md  check_imports.py  config.yaml.example  docker-compose.yaml  docker-compose.yml  marimo-flow-agent.prompt.yml  pyproject.toml
.claude/: settings.json
.claude/Skills/_integration/: workflow_integration.md
.claude/Skills/_templates/: README.md  configuration.py.template  model_definition.py.template  testing_pattern.py.template  training_loop.py.template
.claude/Skills/marimo/: SKILL.md
.claude/Skills/marimo/examples/: basic_dashboard.py  reactive_viz.py  task_manager.py
.claude/Skills/marimo/references/: deployment.md  mcp_integration.md  reactive_patterns.md  state_management.md  ui_components.md
.claude/Skills/mlflow/: SKILL.md
.claude/Skills/mlflow/examples/: fastapi_tracing.py  hyperparameter_tuning.py  langchain_tracking.py
.claude/Skills/mlflow/references/: evaluation.md  framework_integrations.md  genai_tracking.md  model_registry.md  production_deployment.md
.claude/Skills/pina-3d/: SKILL.md
.claude/Skills/pina-amr/: SKILL.md
.claude/Skills/pina-geometry/: SKILL.md
.claude/Skills/pina-inverse/: SKILL.md
.claude/Skills/pina-model/: SKILL.md
.claude/Skills/pina-multiphysics/: SKILL.md
.claude/Skills/pina-problem/: SKILL.md
.claude/Skills/pina-solver/: SKILL.md
.claude/Skills/pina-training/: SKILL.md
.claude/Skills/pina/examples/: fno_example.py  inverse_problem.py  poisson_2d.py  wave_equation.py
.claude/Skills/pina/references/: advanced_solvers.md  custom_models.md  neural_operators.md  problem_types.md  visualization.md
.cursor/: settings.json
.github/: copilot-instructions.md  mcp-config.json
.github/agents/: MLflow.md  Marimo-Flow.md  Marimo.md  README.md  judge-agent.md  planner-agent.md  worker-data.md  worker-mlflow.md  worker-notebook.md  worker-pina.md  worker-testing.md
.github/workflows/: claude-code.yml  copilot-setup-steps.yml  docker-publish.yml  marimo-pages.yml  python-publish.yml
data/mlflow/db/: .gitkeep
docker/: .marimo.toml  Dockerfile  Dockerfile.cuda  Dockerfile.xpu  custom.css  docker-compose.cuda.yaml  docker-compose.xpu.yaml  docker-compose.yaml  marimo-flow-agent  marimo-flow-code  start.sh
docs/: CODEBASE-ANALYSIS.md  INDEX.md  MCP-SETUP.md  README.md  RESEARCH_SUMMARY.md  agents.md  integration-patterns.md  marimo-quickstart.md  mcp-setup.md  mlflow-quickstart.md  polars-quickstart.md  pydantic-ai-toolsets-reference.md  roadmap.md
docs/superpowers/plans/: 2026-04-21-marimo-flow-pina-team.md
examples/: 00_data_exploration.py  01_basic_ml_workflow.py  01_feature_engineering.py  01_interactive_data_profiler.py  01_pina_poisson_solver.py  02_basic_ml_workflow.py  02_mlflow_experiment_console.py  02_model_comparison.py  02_provenance_dashboard.py  03_data_exploration.py  03_model_comparison.py  03_navier_stokes_3d_cavity.py  03_pina_walrus_solver.py  04_Finetuning.py  04_hyperparameter_tuning.py  04_mpc_heat_rod.py  05_model_registry.py  06_production_pipeline.py  07_lora_finetuning.py  08_gnn_hetero_demo.py  09_pina_live_monitoring.py  lab.py  marimo_demo.py
examples/tutorials/: agent.py  altair_visualization.py  data_explorer_pattern.py  data_loading.py  duckdb_sql.py  marimo_forms.py  marimo_state_patterns.py  mlflow_setup.py  openvino_1.py  plotly_interactive.py  polars_advanced_aggregations.py  polars_window_functions.py  pyg_basics.py  rag.py
examples/tutorials/mlflow/: mlflow-0.py  mlflow-1.py
examples/tutorials/pina/: pina-1.py  pina-2.py
experimental/: 05_gnn_hetero_demo.py  app_astrophotography.py  app_cosmos_analysis.py
refs/: README.md  integration-patterns.md  marimo-quickstart.md  pina-quickstart.md  plotly-quickstart.md
scripts/: setup-claude-desktop.sh  start-dev.sh  start-marimo-mcp.cmd  start-marimo-mcp.ps1  start-marimo-mcp.sh  verify-mcp-setup.sh
snippets/: __init__.py  altair_visualization.py  basic_ml_cell.py  chat-ollama.py  data_explorer_pattern.py  data_loading.py  interactive_params.py  marimo_forms.py  marimo_state_patterns.py  mlflow-2.py  mlflow-3.py  mlflow-pina-0.py  mlflow_setup.py  model_training.py  pina-0.py  pina-3.py  pina_basics.py  plotly_interactive.py  polars_advanced_aggregations.py  polars_window_functions.py  pyg_basics.py  pytorch_basics.py  pytorch_geometric_advanced.py  pytorch_geometric_gnn.py  rag.py
src/marimo_flow/: __init__.py  cli.py
src/marimo_flow/agents/: __init__.py  chat.py  deps.py  graph.py  lead.py  mcp.py  persistence.py  skills.py  state.py
src/marimo_flow/agents/nodes/: __init__.py  mlflow_node.py  model.py  notebook.py  problem.py  route.py  solver.py  training.py  triage.py  validation.py
src/marimo_flow/agents/schemas/: __init__.py  artifacts.py  control.py  decisions.py  equation.py  mesh.py  observation.py  preset.py  (+5 more)
src/marimo_flow/control/: __init__.py  mpc.py
src/marimo_flow/core/: __init__.py  callbacks.py  model_factory.py  model_manager.py  modeling.py  problem.py  problem_manager.py  solver_manager.py  training.py  visualization.py  viz3d.py  walrus.py
src/marimo_flow/snippets/: __init__.py  charts.py  dataframes.py
tests/: conftest.py  test_cli.py  test_training.py
tests/agents/: test_artifact_mirror.py  test_chat.py  test_composer.py  test_control.py  test_curator_toolset.py  test_data_toolset.py  test_demos_compose.py  test_deps.py  test_design.py  test_e2e.py  test_graph.py  test_lead.py  test_lead_layout.py  test_mcp.py  test_mesh_domain.py  test_persistence.py  test_problem_toolset.py  test_provenance.py  test_schemas.py  test_servers.py  test_services_experiment.py  test_services_orchestrator.py  test_skills.py  test_state.py  test_toolset_retries.py  test_viz3d.py
tests/agents/test_nodes/: test_mlflow_node.py  test_model.py  test_notebook.py  test_problem.py  test_route.py  test_solver.py  test_triage.py  test_validation.py
tools/: ollama_manager.py  openvino_manager.py
(+25 files in other folders)
