[project]
name = "marimo-flow"
version = "0.1.3"
description = "Marimo Flow - Interactive ML notebooks with MLflow integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Bjoern Bethge", email = "bjoern.bethge@gmail.com"},
]
keywords = ["marimo", "mlflow", "machine-learning", "notebooks", "interactive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "marimo[lsp,recommended,sql,mcp]>=0.14.0",
    "mlflow[genai,mcp]>=2.18.0"
]

[project.optional-dependencies]
ml = [
    "numpy>=2.1.0",
    "polars>=1.16.0",
    "scikit-learn>=1.6.0",
    "altair>=5.5.0",
    "vegafusion>=1.7.0",
]
openvino = [
    "openvino>=2025.3.0",
    "httpx>=0.28.0",
]
apps = [
    "astropy>=6.1.0",
    "astrophot>=0.16.0",
    "duckdb>=1.1.3",
    "plotly>=6.0.0",
    "nbformat>=5.10.0",
]
full = [
    "marimo-flow[ml,openvino,apps]",
    "torch>=2.6.0",
    "torch-geometric>=2.7.0",
    "pina-mathlab>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/bjoernbethge/marimo-flow"
Repository = "https://github.com/bjoernbethge/marimo-flow"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["marimo_flow*"]
exclude = ["tests*", "docs*", "examples*", "snippets*", "raw*", "models*", "mlruns*"]

[tool.setuptools.package-data]
marimo_flow = ["py.typed", "*.yaml", "*.yml", "*.json", "*.css", "*.mp4"]

[tool.uv]
link-mode = "copy"

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }








