[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marimo-flow"
version = "0.2.0"
description = "Marimo Flow - Interactive ML notebooks with MLflow integration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Björn Bethge", email = "bjoern.bethge@gmail.com"},
]
keywords = ["marimo", "mlflow", "machine-learning", "notebooks", "interactive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "marimo[lsp,recommended,sql,mcp]>=0.21.0",
    "mlflow[genai,mcp]>=3.10.1",
    "pina-mathlab>=0.2.1",
    "transformers[accelerate,sentencepiece,tiktoken]>=4.55.0",
    # security: explicit minimums for vulnerable transitive deps
    "authlib>=1.6.7",
    "pillow>=12.1.1",
    "cryptography>=46.0.5",
    "langgraph>=1.0.10",
    "werkzeug>=3.1.6",
    "sqlparse>=0.5.4",
    "diskcache>=5.6.3",
    "protobuf>=6.33.5",
    "python-multipart>=0.0.22",
    "ujson>=5.12.0",
    "pyasn1>=0.6.3",
    "pyjwt>=2.12.0",
    "flask>=3.1.3",
]

[project.optional-dependencies]
all = [
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
]
docs = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/synapticore-io/marimo-flow"
Repository = "https://github.com/synapticore-io/marimo-flow"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["marimo_flow*"]
exclude = ["tests*", "docs*", "examples*", "snippets*", "raw*", "models*", "mlruns*"]

[tool.setuptools.package-data]
marimo_flow = ["py.typed", "*.yaml", "*.yml", "*.json", "*.css", "*.mp4"]

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
